# cardano-twitch-games

./: .gitignore  .gitmodules  README.md
contract/: Cargo.toml  contract.json
contract/src/: config.rs  game.rs  lib.rs  logs.rs  tx_handlers.rs
scripts/deploy-contract/: Cargo.toml  README.md
scripts/deploy-contract/src/: firefly.rs  main.rs
streamgames/: icon.svg.import  project.godot
streamgames/assets/: lime-texture.jpg.import
streamgames/assets/icons/: close-icon.png.import
streamgames/assets/sounds/: marble-hit.ogg.import  marble-win.mp3.import
streamgames/games/marbles_2d/: marble.gd  marble.gd.uid  marble.tscn  marbles_2d.gd  marbles_2d.gd.uid  marbles_2d.tscn
streamgames/games/marbles_2d/terrain/: box.tscn  terrain_polygon.gd  terrain_polygon.gd.uid  terrain_polygon.tscn
streamgames/global/: api_manager.gd  api_manager.gd.uid  api_manager.tscn  config_manager.gd  config_manager.gd.uid  config_manager.tscn  sound_manager.gd  sound_manager.gd.uid  sound_manager.tscn
streamgames/resource_scripts/: player.gd  player.gd.uid
streamgames/scenes/: game.gd  game.gd.uid  game.tscn
streamgames/ui/: create_game_ui.gd  create_game_ui.gd.uid  create_game_ui.tscn  game_result_ui.gd  game_result_ui.gd.uid  game_result_ui.tscn  games_list_ui.gd  games_list_ui.gd.uid  games_list_ui.tscn  modal.gd  modal.gd.uid  modal.tscn  reward_config_ui.gd  reward_config_ui.gd.uid  reward_config_ui.tscn  settings_ui.gd  settings_ui.gd.uid  settings_ui.tscn
